test/errors/invalid_assignment_target.sl
# expect: COMPERROR
1 = 2;
